# Neural-Machine-Translation

./: README.md  model_embeddings.py  nmt_model.py  pyproject.toml  utils.py  vocab.py
runs/nmt_local/: events.out.tfevents.1748103685.oddity-Inspiron-14-5418.148445.0
