[tool.poetry]
name = "student"
version = "0.1.0"
description = "This is an assignment for CS224n at Stanford"
authors = ["VedantYadav025 <vedantyadav24725@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
